designed product managemnt and product add form

--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -9,7 +9,7 @@
     <li><a href="/admin/users"
         class="font-medium <%=title==='User-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500'  %>">User
         Management</a></li>
-    <li><a href="#"
+    <li><a href="/admin/product"
         class="font-medium <%=title=== 'Products-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Products
         Management</a></li>
     <li><a href="#"
