--- a/views/admin/productManagement.ejs
+++ b/views/admin/productManagement.ejs
@@ -30,7 +30,7 @@
       </a>
     </form>
 
-   <a href="/admin/addProduct"> <button type="button" 
+   <a href="/admin/product/add"> <button type="button" 
       class="ml-4 flex items-center gap-3 px-5 py-2.5 text-sm font-medium text-white bg-yellow-600 rounded-lg hover:bg-yellow-300 focus:ring-4 focus:outline-none focus:ring-yellow-300">
       Add Product
     </button></a>
